[gd_scene load_steps=8 format=3 uid="uid://ciw8kicv5qio"]

[ext_resource type="Script" uid="uid://oii3tpln84qt" path="res://scenes/main/main_game.gd" id="1_413jr"]
[ext_resource type="PackedScene" uid="uid://cudk5len203pr" path="res://scenes/ui/user_interface.tscn" id="2_1k3s6"]
[ext_resource type="PackedScene" uid="uid://cx4cww6s8ebwt" path="res://scenes/ui/tutorial.tscn" id="4_krqjs"]
[ext_resource type="PackedScene" uid="uid://bxgoxuadiaobw" path="res://scenes/ui/level_end.tscn" id="4_pnaw2"]
[ext_resource type="AudioStream" uid="uid://dukx4v58jcx4p" path="res://assets/audio/sfx/level stingers/doorbell-001.mp3" id="5_v4wsd"]
[ext_resource type="AudioStream" uid="uid://bf0gr0ijjiobx" path="res://assets/audio/sfx/level stingers/doorbell-002.mp3" id="6_0wxsa"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_uu6wu"]
streams_count = 2
stream_0/stream = ExtResource("5_v4wsd")
stream_1/stream = ExtResource("6_0wxsa")

[node name="MainGame" type="Node2D"]
script = ExtResource("1_413jr")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(640, 360)

[node name="WhiteBg" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
mouse_filter = 2

[node name="UserInterface" parent="." instance=ExtResource("2_1k3s6")]
metadata/_edit_use_anchors_ = true

[node name="Tutorial" parent="." instance=ExtResource("4_krqjs")]

[node name="LevelEnd" parent="." instance=ExtResource("4_pnaw2")]
visible = false
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="LevelTimer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[node name="SpawnTimer" type="Timer" parent="."]

[node name="Doors" type="Node2D" parent="."]

[node name="SFX" type="Node" parent="."]

[node name="Doorbell" type="AudioStreamPlayer2D" parent="SFX"]
stream = SubResource("AudioStreamRandomizer_uu6wu")
volume_db = -5.0
bus = &"SFX"

[connection signal="timeout" from="LevelTimer" to="." method="_on_level_timer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_door_timer_timeout"]
